--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <!--? ==== NAVBAR ==== -->
     <header>
         <div class="container">
             <div class="nav">
@@ -48,13 +49,14 @@
             </div>
         </div>
     </header>
+    <!--! ==== NAVBAR END ==== -->
     <!--? ==== HERO ==== -->
     <section class="home" id="home">
         <div class="img"></div>
         <div class="container h-100 al-c">
             <div class="title">
                 <h1>Good Coffee Will<br>Always Find The <br> Audience</h1>
-                <h4>We provide a variety of unique and Best Coffee</h4>
+                <p>We provide a variety of unique and Best Coffee</p>
                 <a href="#menu">
                     <div class="btn">Order Now</div>
                 </a>
@@ -142,9 +144,43 @@
     <footer>
         <div class="container">
             <div class="footer-grid">
-                
+                <div class="footer-item">
+                    <div class="nav-logo">
+                        <img src="https://s3-alpha-sig.figma.com/img/4970/9070/c410fe55acb123a678ad45e10f0fdd7c?Expires=1698019200&Signature=XytIebfR-RaneU2qDaHYtxPpBjOl4iCnSsM-wQxqLRP7ggdpRQHXX0Pc2GQqB51GH6HWvp6jPmvZh7eUP5Mfg11wv0GbS5ku~TzlTf72yX4O9HxwXQV4cp6ksvLRkSgjZg1yLLTUNektnLueFHZy6gy31QEyy6GFyaKoExzgG5m74kTsUkfNtLEOCmmHpS-DjbFzZxWWeUgdxFs~0~4xUE1e2X1M4FycIsh5xrHdoZlwd30e8V4n2n80bS4t674sBb317-54WlDuPyuinAHRCjFD6Gdyh57rF3oK0MVfbd6l5C0WLovF42mP~ZpvNUfOlbZP0t4fNk8S-f9FmekIig__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                            alt="">
+                        <p>Cof<span>fe</span>e Be<span>ans</span></p>
+                    </div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet sint debitis, ducimus voluptate
+                        voluptas quos?</p>
+                    <div class="sosmed">
+                        <div class="sos">
+                            <a href="https://facebook.com"><i class="fa-brands fa-facebook-square"></i></a>
+                        </div>
+                        <div class="sos">
+                            <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                        </div>
+                        <div class="sos">
+                            <a href="https://twitter.com"><i class="fa-brands fa-x-twitter"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-item">
+                    <h1>Contact Us</h1>
+                    <p>Phone Number : 0858 5996 7614</p>
+                    <p>Email : abdullahfaqihmaruf@gmail.com</p>
+                    <p>The address is in Indonesia</p>
+                </div>
+                <div class="footer-item">
+                    <h1>Viewer Guides</h1>
+                    <a href="#home">Home</a>
+                    <a href="/">About</a>
+                    <a href="/">Menu</a>
+                    <a href="/">News</a>
+                </div>
             </div>
         </div>
+        <hr>
+        <p style="text-align: center;padding: 10px;">Designed by Faqih | Code by Izzul</p>
     </footer>
     <!--! ==== DEFINITION END ==== -->
     <script src="js/index.js"></script>
