Main Fixed Phase1

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     <div class="cart">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <div class="burger">
-                            <input type="checkbox" id="">
-                            <span></span>
-                            <span></span>
-                            <span></span>
+                            <input type="checkbox" id="burgerClick">
+                            <span id="span1"></span>
+                            <span id="span2"></span>
+                            <span id="span3"></span>
                         </div>
                     </div>
                 </nav>
@@ -140,7 +140,7 @@
         </div>
     </section>
     <!--! ==== DEFINITION END ==== -->
-    <!--? ==== DEFINITION  SECTION ==== -->
+    <!--? ==== FOOTER ==== -->
     <footer>
         <div class="container">
             <div class="footer-grid">
@@ -182,8 +182,7 @@
         <hr>
         <p style="text-align: center;padding: 10px;">Designed by Faqih | Code by Izzul</p>
     </footer>
-    <!--! ==== DEFINITION END ==== -->
+    <!--! ==== FOOTER END ==== -->
     <script src="js/index.js"></script>
 </body>
-
 </html>
