--- a/about/index.html
+++ b/about/index.html
@@ -16,9 +16,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--| Style -->
     <link rel="stylesheet" href="https://raw.githubusercontent.com/izzulaverroes/ave/main/cdn.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="https://s3-alpha-sig.figma.com/img/4970/9070/c410fe55acb123a678ad45e10f0fdd7c?Expires=1698019200&Signature=XytIebfR-RaneU2qDaHYtxPpBjOl4iCnSsM-wQxqLRP7ggdpRQHXX0Pc2GQqB51GH6HWvp6jPmvZh7eUP5Mfg11wv0GbS5ku~TzlTf72yX4O9HxwXQV4cp6ksvLRkSgjZg1yLLTUNektnLueFHZy6gy31QEyy6GFyaKoExzgG5m74kTsUkfNtLEOCmmHpS-DjbFzZxWWeUgdxFs~0~4xUE1e2X1M4FycIsh5xrHdoZlwd30e8V4n2n80bS4t674sBb317-54WlDuPyuinAHRCjFD6Gdyh57rF3oK0MVfbd6l5C0WLovF42mP~ZpvNUfOlbZP0t4fNk8S-f9FmekIig__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" type="image/x-icon">
-    <title id="pagetitle">CoffeeBeans | Home</title>
+    <title id="pagetitle">CoffeeBeans | About</title>
 </head>
 
 <body>
@@ -33,13 +33,13 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="/menu/">Menu</a></li>
-                        <li><a href="news">News</a></li>
-                        <li><a href="about">About</a></li>
+                        <li><a href="../">Home</a></li>
+                        <li><a href="../menu/">Menu</a></li>
+                        <li><a href="../news">News</a></li>
+                        <li><a href="#">About</a></li>
                     </ul>
                     <div class="cart">
-                        <a href="/menu/"><i class="fa-solid fa-cart-shopping" style="font-size: x-large;"></i></a>
+                        <a href="../menu/"><i class="fa-solid fa-cart-shopping" style="font-size: x-large;"></i></a>
                         <div class="burger">
                             <input type="checkbox" id="burgerClick">
                             <span id="span1"></span>
@@ -194,7 +194,7 @@
         <p style="text-align: center;padding: 10px;">Designed by Faqih | Code by Izzul</p>
     </footer>
     <!--! ==== FOOTER END ==== -->
-    <script src="js/index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
