--- a/about/index.html
+++ b/about/index.html
@@ -54,14 +54,11 @@
     <!--! ==== NAVBAR END ==== -->
     <!--? ==== HERO ==== -->
     <section class="home" id="home">
-        <div class="img"></div>
+        <div class="imggggg"></div>
         <div class="container h-100 al-c">
             <div class="title">
-                <h1>Good Coffee Will<br>Always Find The <br> Audience</h1>
+                <h1>Always About<br>Coffee and <br> Love.</h1>
                 <p>We provide a variety of unique and Best Coffee</p>
-                <a href="#menu">
-                    <div class="btn">Order Now</div>
-                </a>
             </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -75,82 +72,15 @@
     <section class="menu" id="menu">
         <div class="container">
             <div class="tit">
-                <h1>Our Special Coffee</h1>
+                <h1>About Coffee</h1>
             </div>
             <div class="m">
 
-                <div class="menu-box">
-                    <div class="menu-item">
-                        <img src="https://s3-alpha-sig.figma.com/img/1c59/38a8/f392780c67a307e33f502397b884c024?Expires=1698019200&Signature=ZkisdMGvo-wTyyJcJlNMrdIAzaZFRWd-dJsBuGGd-EyYubKYcHgtSaUx9HD1E5gqHD8PRIsdLhA86ltHyV75STcPQN~hCXhzM2jA77wXGhvk1Dh9yQMXfesS2cjpZVwbn2lL-YWx24hGftZ3xeegDH92CEukQYyYnYO7mCugO~AK99uobsS1jkohI4PkWPp3PX-NwgJe~xOrQVDxaBPmoO1iuTcWYLg9KnWAotagrvP0br5FsV9W~Jdpjkqw-p7HQPk0mxuR6ji1VFP7qB0707hMtqiQqHhR1YTyAf-vpTovkzBKRjcjqe1LDLV2JStLg7outj8KgsM4I6o4P4sosw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-                            alt="">
-                        <div class="des">
-                            <h3>Matcha Coffee</h3>
-                            <p>This coffee is made using real coffee beans with a macha mixture.</p>
-                            <div class="price">
-                                <p>Rp 22.000</p>
-                                <a href="/menu/">
-                                    <div class="buy">
-                                        BUY
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-item">
-                        <img src="https://s3-alpha-sig.figma.com/img/6d53/9090/eb8b45fd71f9e4853e34e6f5f472568f?Expires=1698019200&Signature=YNuu9CQsywQBjUtPf7SQn6zNoOCgaUgO4lIT3Yx9TPzoWj7l8N5MZUm4~6Tn24MKjPBf6FbdLYC748kRk7h-AjgCHys1ITiKkO6IBguOHShNnSNwbvb0QJwEOYKXvZ7H5MXEYZGZj2Aokm~mTh-MsoMbVvfEyYdOmP4SLaap9srs00pML~uMdBcN9ZieRdrs7Dm75ZQPRgAO7ov0nBtGtmmJ7f0RiuM1mpfqLGa-pbdnxLC5ut1FRjkmjr3ppgUAg4fx4seLR5ZHeA5bShkyHzycJP0qp~B5-I3RNjZ616aTEn5MvP9bUnuMlW7KOSP6rEf4WA0R4eGTzeWag75VCw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-                            alt="">
-                        <div class="des">
-                            <h3>Coffee Beans Original</h3>
-                            <p>This coffee is made using real coffee beans.</p><br>
-                            <div class="price">
-                                <p>Rp 10.000</p>
-                                <a href="/menu/">
-                                    <div class="buy">
-                                        BUY
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-item">
-                        <img src="https://s3-alpha-sig.figma.com/img/9aee/0692/faa9d4327ca88c1d0c3a421794c82813?Expires=1698019200&Signature=kzPhUc0qgduXeNt4BdTB0mrzQy4BriMyjDYH5uLHCcpQ8bcXX2Tcv-tL-5fDZXTHCYJ48WnWM1-XECyvQDW-Yp7GI7NXpN4wdKfcWUhHeWIgdDpzBYsLW26zViE7mQ73dJdFJGtjmTJnmzLJvW6ipIJHzqhc2X4Foav3BzJarUCoCtJCxXJV4NJPacuos2Mm4ErPW9H1MZp5A32oSa52ojVZ-vqZQnnjt5r-UkULR-Iq5kQ~webMLwWJH0Cpw0M7lIMrUFK0YyjBxVWnUWwNOEFzDCnb~SCH44BzZlRF2t~6euwoL0J2kwgWYrd1Rw2QTTx54qsCoEbm3UKH0lXmTg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-                            alt="">
-                        <div class="des">
-                            <h3>Matcha Coffee</h3>
-                            <p>This coffee is made using real coffee beans.</p><br>
-                            <div class="price">
-                                <p>Rp 15.000</p>
-                                <a href="/menu/">
-                                    <div class="buy">
-                                        BUY
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+               
             </div>
         </div>
     </section>
     <!--! ==== MENU END ==== -->
-    <!--? ==== DEFINITION  SECTION ==== -->
-    <section class="def" id="def">
-        <div class="container">
-            <div class="def-grid">
-                <img src="https://s3-alpha-sig.figma.com/img/f704/1669/a46951a37e8189d882adf9dfe165d386?Expires=1698019200&Signature=UQm6nIJasDvoP-XhA1CTbuQD8EzMgzz7UwNrTlTijVu7~CM3TzpegFcVRNZA0Myyq0Of-vOuh9h6WJw5fGa2Iutv66a1JZ7sxPLpey7KH4e4ml2ocHULhaRwWocxoIT~jWNZgccutZY2exdq9LjBK44MFdzBiZq2qhAJ8ROUpStRe05pDVdIAYAo5YphTcu58QatAGQN0WACTvdd2uVc7Z2oYGgtY9rK0qBs96e5UTw27kjcvW8t8gyUNdX13kcnVm2A-TkingfAC2aM3bMx129Ms0p3Iyam5te3YnwUff2JiD7N4xroC7ycF3ou1c02ZpjTQvut0un9YJOpc9X7nw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-                    alt="">
-                <div class="def-text">
-                    <h1>Best Coffee House In <br>Your Home Town</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia iure, suscipit voluptatem
-                        consequuntur adipisci excepturi in velit sapiente beatae! Placeat, veritatis, perferendis
-                        dolorum odio, omnis dicta vitae non ea provident expedita illo asperiores laborum cupiditate
-                        natus itaque doloribus officiis voluptatem delectus? Reiciendis facilis pariatur soluta, labore
-                        corrupti voluptatibus velit quia.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--! ==== DEFINITION END ==== -->
     <!--? ==== FOOTER ==== -->
     <footer>
         <div class="container">
