--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <nav>
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="menu/">Menu</a></li>
-                        <li><a href="news/">News</a></li>
-                        <li><a href="about/">About</a></li>
+                        <li><a href="/menu/">Menu</a></li>
+                        <li><a href="/news/">News</a></li>
+                        <li><a href="/about/">About</a></li>
                     </ul>
                     <div class="cart">
                         <a href="/menu/"><i class="fa-solid fa-cart-shopping" style="font-size: x-large;"></i></a>
