--- a/menu/index.html
+++ b/menu/index.html
@@ -38,8 +38,8 @@
                     <ul>
                         <li><a href="../" id="l-home">Home</a></li>
                         <li><a href="#" id="l-menu">Menu</a></li>
-                        <li><a href="/news/" id="l-news">News</a></li>
-                        <li><a href="/about/">About</a></li>
+                        <li><a href="../news/" id="l-news">News</a></li>
+                        <li><a href="../about/">About</a></li>
                     </ul>
                     <div class="cart">
                         <i class="fa-solid fa-cart-shopping" style="font-size: x-large;" id="cartButton"
