--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <nav>
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="/menu/">Menu</a></li>
+                        <li><a href="menu/">Menu</a></li>
                         <li><a href="news/">News</a></li>
                         <li><a href="about/">About</a></li>
                     </ul>
