--- a/menu/index.html
+++ b/menu/index.html
@@ -90,6 +90,12 @@
                     <div class="list">
                         
                     </div>
+                    <div class="tit">
+                        <h1 style="color: var(--third);">DESSERT MENU</h1>
+                    </div>
+                    <div class="listCookie">
+                        
+                    </div>
                 </div>
             </div>
         </section>
